- Fixed layout on the lobby screen and made style consistent - Button and text entry radius is now the same - The hover radius is the same as well - The boat selection does not take up too much of the screen anymore - The leave and ready buttons always align with the sides of the list view
#story[1315]

--- a/Visualizer/src/main/resources/css/lobby.css
+++ b/Visualizer/src/main/resources/css/lobby.css
@@ -1,7 +1,7 @@
 
 .list-view {
     -fx-background-color: transparent;
-    -fx-border-width: 4px;
+    -fx-border-width: 3px;
     -fx-border-radius: 10px;
     -fx-border-color: white;
 }
@@ -13,7 +13,9 @@
 }
 
 
-#controlbutton {
+
+.controlbutton {
     -fx-background-color: transparent;
     -fx-border-color: transparent;
+    -fx-padding: 0;
 }
